--- a/src/Components/Herosection/Hero.module.css
+++ b/src/Components/Herosection/Hero.module.css
@@ -3,11 +3,12 @@
     top: 0;
     left: 712px;
     width: 500px;
-    height: 682px;
+    height: 782px;
     object-fit: cover;
-    margin-left: 100px;
+    margin-left: 150px;
+    margin-bottom: 100px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("../../Images/Image\ Placeholder.png");
+    url("../../Images/monkey.png");
   }
   .container {
     position: absolute;
@@ -225,7 +226,6 @@
   }
   .hero {
     position: absolute;
-    top: 50px;
     left: 68px;
     width: 1212px;
     height: 782px;
